
  [ Sergei Golovan ]
  * Installed eldap.hrl header. It is necessary to build some external modules
    for ejabberd.
  * Moved headers which are in subdirectories of src directory to
    corresponding subdirectory of /usr/lib/ejabberd/include/ as they are
    usually included with subdirectory prepended.
  * Included a patch which adds LDAPS support (closes: #477918).

  [ Torsten Werner ]
  * Updated german debconf templates translation.
  * Update Vcs headers in debian/control.

 -- Torsten Werner <twerner@debian.org>  Mon, 28 Apr 2008 23:19:05 +0200

ejabberd (2.0.0-6) unstable; urgency=low

  * Replaced a patch for proxy65 module with nicer one (thanks to Evgeniy
    Khramtsov).
  * Added a patch for S2S module to make STARTTLS working with Erlang R12B.
  * Added a patch by upstream fixes crash when browsing the Update page in
    Erlang R12B.
  * Fixed ODBC patch to work with Erlang R11B also.

 -- Sergei Golovan <sgolovan@debian.org>  Tue, 11 Mar 2008 15:10:42 +0300

ejabberd (2.0.0-5) experimental; urgency=low

  * Turned unnecessary error messages in mod_caps module into debug messages.
  * Added a few patches to shared roster module and also added mod_ctlextra
    (a module which offers many more or less useful commands to ejabberdctl)
    following the discussion in the following thread:
    http://lists.debian.org/debian-edu/2008/03/msg00017.html

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 07 Mar 2008 20:30:07 +0300

ejabberd (2.0.0-4) experimental; urgency=low

  * Updated French debconf templates translation (closes: #468788).
  * Disabled epoll by default in /etc/default/ejabberd.
  * Increased default maximum number of conference room occupants to 500.
    Given increasing popularity of XMPP old default value 200 is too low.
  * Disabled SMP support in ejabberd by default. It isn't necessary in most
    cases but can be less reliable.
  * Enabled PAM authentication support (yet needs to be refined).
