@@ -2,7 +2,7 @@ Document: ejabberd
 Title: Debian ejabberd Manual
 Author: Alexey Shchepin <alexey@sevcom.net>
 Abstract: User manual for ejabberd - Erlang Jabber server.
-Section: Apps/Net
+Section: Net
 
 Format: HTML
 Index: /usr/share/doc/ejabberd/guide.html
